--- a/config/database.yml
+++ b/config/database.yml
@@ -14,12 +14,13 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:
+  password: mikey27
   host: localhost
+  socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: railsTest_development
+  database: #railsTest_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
