users model added

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,21 +13,21 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password: mikey27
+  username: testadmin
+  password: password
   host: localhost
   socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: #railsTest_development
+  database: rails_test_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: railsTest_test
+  database: rails_test_development
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
